# docbot

./: .gitignore  README.md  concatenate_docs.py  docker-compose.yml
backend/: Dockerfile  README_GEMINI_CLI.md  pyproject.toml  test_security.py
backend/app/: __init__.py  cli_agent.py  config.py  logging_config.py  main.py  models.py  security.py
backend/app/agents/: document_agent.py  gemini_cli_agent.py  smart_search_agent.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Message.module.css  Message.module.css.d.ts  Message.tsx
frontend/src/hooks/: useMessageFiltering.ts
